Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36969

Webkit FTBFS on s390x and powerpc because it tries to use the macroassembler when it should not

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.0
    • 5.2.0
    • WebKit
    • None
    • Debian sid

      As discussed in [0] Qt Webkit is FTBFS in s390x [1] and powerpc [2] because it's trying to compile with MacroAssembler support while it shouldn't.

      Of course, feel free to tell me where should I look to try to get a fix for this, as I recognize not everyone has access to this arches.

      [0] <http://lists.qt-project.org/pipermail/development/2014-February/015616.html>
      [1] <<https://buildd.debian.org/status/fetch.php?pkg=qtwebkit-opensource-src&arch=s390x&ver=5.2.0%2Bdfsg1-1&stamp=1391444133>>
      [2] <https://buildd.debian.org/status/fetch.php?pkg=qtwebkit-opensource-src&arch=powerpc&ver=5.2.0%2Bdfsg-2&stamp=1388005710>

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            lisandropm Lisandro Damián Nicanor Pérez Meyer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes